# environmental-ts-data-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  serve.py
.github/workflows/: annual-update.yml  manual-backfill.yml  monthly-update.yml
agent/: __init__.py  agent.py  llm_client.py  router.py  system_prompt.py  tools.py
api/: __init__.py  cache.py  dependencies.py  main.py  schemas.py
api/routers/: burned_area.py  geometry.py  health.py  ndvi.py
config/: phenology_profiles.yaml  sites.yaml
config/aoi/: AoI_Zambia_WL.geojson
docs/: shiny_app_data_structure_report.md
outputs/: update_log.csv
outputs/processed/: verification_snapshot.json
pipeline/: __init__.py  auth.py  burned_area.py  config.py  export.py  modis.py  sentinel2.py  validate.py
preprocess/: core.py  validate.py  verify_outputs.py
reference/: README.md  getGEEdata.js  paramsGEE.js  preprocGEE.js
scripts/: backfill.py  backfill_full.py  check_burned_area_aoi.py  check_burned_area_c6_match.py  check_burned_area_patterns.py  check_burned_area_qa.py  check_burned_area_reliability.py  check_burned_area_status.py  check_ndvi_polygon_clipping.py  deploy.py  monthly_update.py  pre_backfill_verification.py  preprocess_pass_a.py  preprocess_pass_b.py  test_mponda_validation.py
