[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "environmental-ts-data-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api",
    "geopandas",
    "rasterio",
    "numpy",
    "pandas",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"
