[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "environmental-ts-data-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api",
    "geopandas",
    "rasterio",
    "numpy",
    "pandas",
    "pyyaml",
    "python-dotenv",
    "scipy",
    "requests",
    "pymannkendall>=1.4",
    "pyarrow>=14.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "litellm>=1.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "preprocess", "api", "agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
